# clinical-research-agent

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  result.md
evals/: metrics.py  questions.yaml  run.py
src/clinical_research_agent/: __init__.py  _cli.py  _utils.py  config.py  graph.py  state.py
src/clinical_research_agent/agents/: critic.py  planner.py  reader.py  search.py  synthesizer.py
src/clinical_research_agent/observability/: tracing.py
src/clinical_research_agent/prompts/: critic.txt  planner.txt  reader.txt  search.txt  synthesizer.txt
src/clinical_research_agent/tools/: _utils.py  arxiv.py  pubmed.py  semantic_scholar.py
tests/: conftest.py  test_agents.py  test_tools.py
