[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinical-research-agent"
version = "0.1.0"
description = "Multi-agent clinical literature research system demonstrating ReAct, self-reflection, and hierarchical delegation with LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "diskcache>=5.6",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
clinical-research = "clinical_research_agent._cli:main"

[project.optional-dependencies]
gemini = ["langchain-google-genai>=2.0"]
vertex = ["langchain-google-vertexai>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clinical_research_agent"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
